# WordsCounter

./: CMakeLists.txt  configurationReader.cpp  configurationReader.h  countingFunctions.cpp  countingFunctions.h  linesCounter.cpp  linesCounter.h  lol.cpp  main.cpp  outPutFunc.cpp  outPutFunc.h  wordCount.cpp  wordReader.cpp
